--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "epubjs": "^0.3.93",
     "localforage": "^1.10.0",
     "react": "^19.2.0",
